# review-pilot

./: .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
src/review_pilot/: __main__.py  config.py  context_resolver.py  diff_parser.py  models.py  reviewer.py
src/review_pilot/agents/: convention_miner.py  diff_router.py  language_detector.py  orchestrator.py  review_synthesizer.py
src/review_pilot/agents/specialists/: __init__.py  api_contract.py  architecture_boundary.py  common.py  data_access.py  logging_error.py  registry.py  reliability.py  security.py
src/review_pilot/policy/: load_policy.py  merge_policy.py
tests/: conftest.py  test_context_resolver.py  test_diff_parser.py  test_reviewer.py
tests/agents/: test_diff_router.py  test_review_synthesizer.py
tests/agents/specialists/: test_api_contract.py  test_architecture_boundary.py  test_data_access.py  test_logging_error.py  test_reliability.py  test_security.py
tests/policy/: test_merge_policy.py
