[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "review-pilot"
version = "1.0.0"
description = "Semantic code review agent that detects pattern violations linters miss"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "PyGithub>=2.0",
    "anthropic>=0.39",
    "pyyaml>=6.0",
    "wcmatch>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
